--- a/index.html
+++ b/index.html
@@ -104,6 +104,13 @@
                 <td>APROBADO 87%</td>
             </tr>
 
+            <tr>
+                <td>10</td>
+                <td>Tech Trends</td>
+                <td></td>
+                <td></td>
+            </tr>
+
 
 
 
